unpackaged/main/default/objects/LoanApplicationConditions__c/LoanApplicationConditions__c.object-meta.xml
<CustomObject>
    <label>Loan Application Condition</label>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Application Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>