unpackaged/main/default/objects/LoanApplicationConditions__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Loan Application Conditions</relationshipLabel>
    <relationshipName>LoanApplicationConditions</relationshipName>
    <type>Lookup</type>
</CustomField>