unpackaged/main/default/objects/LoanApplicationConditions__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Conditions</fullName>
            </value>
            <value>
                <fullName>Loan Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>